--- a/styles.css
+++ b/styles.css
@@ -1,38 +1,43 @@
-*{
+* {
     margin: 0;
     font-family: 'Open Sans', sans-serif;
-    
+
 }
+
 /* banner styles */
-.header{
+.header {
     background-image: url(/images/donation13.jpg);
-     height: 700px;
-     width: 100%;
+    height: 700px;
+    width: 100%;
     background-repeat: no-repeat;
-     background-size: cover; 
-     background-blend-mode: multiply;
-     
+    background-size: cover;
+    background-blend-mode: multiply;
+
 }
-.header-position{
+
+.header-position {
     text-align: center;
 }
-.header-title{
+
+.header-title {
     color: rgb(247, 247, 247);
     font-size: 50px;
     font-weight: 800px;
     text-align: center;
-    padding-top:200px;
+    padding-top: 200px;
 }
-.header-description{
+
+.header-description {
     color: rgb(255, 255, 255);
     text-align: center;
     font-weight: 500px;
     font-size: 20px;
     margin-top: 30px;
-  
-} 
-.prime-btn{
-    
+
+}
+
+.prime-btn {
+
     color: white;
     background-color: rgb(223, 56, 56);
     border: 0;
@@ -41,34 +46,36 @@
     width: 100px;
     margin-top: 30px;
 }
+
 /* main-section-1 starts */
 
-.sec-1{
-    justify-content: center;
+.sec-1 {
+    text-align: center;
 
 }
-.sec-1-title{
-    
+
+.sec-1-title {
+
     margin-top: 100px;
     font-size: 40px;
     font-weight: 700px;
     margin-bottom: 20px;
 }
 
-.sec-1-description{
-    
-    font-weight: 500px;
+.sec-1-description {
     font-size: 20px;
-    /* padding-left:300px;
-    padding-right:300px; */
+   
+
 }
 
-.sec-1-container{
+
+.sec-1-container {
     display: flex;
     gap: 10px;
     justify-content: center;
 }
-.sec-1-info{
+
+.sec-1-info {
     color: rgb(102, 100, 100);
     background-color: rgb(250, 246, 235);
     /* height: 100px;
@@ -78,20 +85,134 @@
     font-size: 30px;
     font-weight: 400px;
     margin-top: 80px;
-    
+
 }
-.sec-1 p{
+
+.sec-1 p {
     text-align: center;
     margin-top: 80px;
     margin-bottom: 10px;
-    color:rgb(150, 148, 148);
+    color: rgb(150, 148, 148);
     font-size: 35px;
     font-weight: 200px;
 
 }
- .sec-1 hr{
-    color:rgb(150, 150, 150);
-    margin:0 420px; 
-    
+
+.sec-1 hr {
+    color: rgb(150, 150, 150);
+    margin: 0 420px;
+
+}
+
+/* Main Sec-2 starts*/
+.sec-2 {
+    text-align: center;
+}
+
+.sec-2-title {
+
+    margin-top: 100px;
+    font-size: 40px;
+    font-weight: 700px;
+    margin-bottom: 20px;
+
+}
+ .sec-2-description{
+    font-weight: 500px;
+    font-size: 20px;
  }
 
+.sec-2-container {
+    display: flex;
+    margin-top: 30px;
+    gap: 24px;
+    justify-content: center;
+}
+
+/* .id-class {
+
+    text-align: left;
+    
+} */
+
+#sec-2-id-1 {
+    padding-left: 30px;
+    padding-top: 60px;
+    text-align: left;
+    background-color: rgb(230, 245, 255);
+    height: 300px;
+    width: 300px;
+    border-radius: 5px;
+}
+
+#sec-2-id-2 {
+    padding-left: 30px;
+    padding-top: 60px;
+    text-align: left;
+    background-color: rgb(252, 237, 243);
+    height: 300px;
+    width: 300px;
+    border-radius: 5px;
+}
+
+#sec-2-id-3 {
+    padding-left: 30px;
+    padding-top: 60px;
+    text-align: left;
+    background-color: rgb(252, 253, 240);
+    height: 300px;
+    width: 300px;
+    border-radius: 5px;
+}
+
+.sec-2-img {
+    margin-bottom: 30px;
+}
+
+.sec-2-h3 {
+    margin-bottom: 30px;
+
+}
+
+.sec-2-p {
+    color: rgb(150, 150, 150);
+    font-size: 20px;
+}
+
+/* Main Section3 starts */
+.sec-3-container{
+    display: flex;
+    justify-content: center;
+    gap: 60px;
+    margin-top: 100px;
+}
+
+.sec-3-div {
+    
+    padding-left: 30px;
+    padding-top: 60px;
+    text-align: left;
+    height: 300px;
+    width: 300px;
+    
+}
+
+.sec-3-title{
+    font-size: 40px;
+    font-weight: 700px;
+    text-align: left;
+}
+
+.sec-3-decription{
+    text-align: left;
+    font-weight: 500px;
+    font-size: 20px;
+}
+
+ .sec-3-img {
+    /* text-align: center; */
+    height: 500px;
+    width: 500px;
+    border-radius: 5px;
+
+} 
