--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,17 @@
     width: 100px;
     margin-top: 30px;
 }
+.secondary-btn{
+    color: white;
+    background-color: rgb(223, 56, 56);
+    border: 0;
+    border-radius: 5px;
+    height: 40px;
+    width: 200px;
+    margin-top: 30px;
+    
+
+}
 
 /* main-section-1 starts */
 
@@ -118,6 +129,7 @@
 
 }
  .sec-2-description{
+    color:rgb(102, 100, 100);
     font-weight: 500px;
     font-size: 20px;
  }
@@ -189,7 +201,7 @@
 
 .sec-3-div {
     
-    padding-left: 30px;
+    
     padding-top: 60px;
     text-align: left;
     height: 300px;
@@ -198,6 +210,7 @@
 }
 
 .sec-3-title{
+    margin-bottom: 30px;
     font-size: 40px;
     font-weight: 700px;
     text-align: left;
@@ -210,9 +223,75 @@
 }
 
  .sec-3-img {
-    /* text-align: center; */
+    
     height: 500px;
-    width: 500px;
+    width: 600px;
     border-radius: 5px;
 
 } 
+
+/* Main section 4 starts */
+
+.sec-4-container{
+    display: flex;
+    justify-content: center;
+    gap: 60px;
+    margin-top: 100px;
+}
+.sec-4-div {
+    
+    
+    padding-top: 60px;
+    text-align: left;
+    height: 300px;
+    width: 300px;
+    
+}
+.sec-4-title{
+    margin-bottom: 30px;
+    font-size: 40px;
+    font-weight: 700px;
+    text-align: left;
+}
+.sec-4-decription{
+    text-align: left;
+    font-weight: 500px;
+    font-size: 20px;
+}
+.sec-4-img {
+    
+    height: 500px;
+    width: 600px;
+    border-radius: 5px;
+
+} 
+/* Main secton-5 starts*/
+.section-5{
+    text-align: center;
+}
+
+.sec-5-description{  
+     
+    color:rgb(102, 100, 100);
+    font-weight: 500px;
+    font-size: 20px;
+} 
+
+ .sec-5-title{
+   
+    margin-top: 60px;
+    font-size: 40px;
+    font-weight: 700px;
+    margin-bottom: 20px;
+} 
+
+.sec-5-mic{
+
+}
+.input-sec-4{
+    color: black;
+    background-color: rgb(196, 196, 196);
+    border: 0;
+    border-radius: 5px;
+    height: 40px;
+}
