--- a/styles.css
+++ b/styles.css
@@ -45,18 +45,9 @@
     height: 40px;
     width: 100px;
     margin-top: 30px;
-}
-.secondary-btn{
-    color: white;
-    background-color: rgb(223, 56, 56);
-    border: 0;
-    border-radius: 5px;
-    height: 40px;
-    width: 200px;
-    margin-top: 30px;
     
-
 }
+
 
 /* main-section-1 starts */
 
@@ -210,7 +201,7 @@
 }
 
 .sec-3-title{
-    margin-bottom: 30px;
+    margin-bottom: 10px;
     font-size: 40px;
     font-weight: 700px;
     text-align: left;
@@ -248,7 +239,7 @@
     
 }
 .sec-4-title{
-    margin-bottom: 30px;
+    margin-bottom: 10px;
     font-size: 40px;
     font-weight: 700px;
     text-align: left;
@@ -265,13 +256,24 @@
     border-radius: 5px;
 
 } 
+.secondary-btn{
+    color: white;
+    background-color: rgb(223, 56, 56);
+    border: 0;
+    border-radius: 5px;
+    height: 40px;
+    width: 200px;
+    margin-top: 20px;
+    
+
+}
 /* Main secton-5 starts*/
 .section-5{
     text-align: center;
 }
 
 .sec-5-description{  
-     
+     margin-bottom: 30px;
     color:rgb(102, 100, 100);
     font-weight: 500px;
     font-size: 20px;
@@ -285,13 +287,29 @@
     margin-bottom: 20px;
 } 
 
-.sec-5-mic{
+ .sec-5-mic{
+    /* margin-left: 600px; */
+    
+    background-color: rgb(255, 248, 227);
+    width: 700px;
+    height: 230px;
+    margin-left: 500px;
+    
 
-}
-.input-sec-4{
+} 
+.input-sec-5{
+    
+    margin-top: 100px;
     color: black;
     background-color: rgb(196, 196, 196);
     border: 0;
     border-radius: 5px;
     height: 40px;
+
+    
+} 
+
+.foot-cursive{
+  
+
 }
