--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 
 /* banner styles */
 .header {
-    background-image: url(/images/donation13.jpg);
+    background-image: url(images/donation13.jpg);
     height: 700px;
     width: 100%;
     background-repeat: no-repeat;
