--- a/styles.css
+++ b/styles.css
@@ -386,6 +386,30 @@ color: black;
 }
 
 }
-@media screen and (min-width:577px){
+@media screen and (min-width:577px) and (max-width:992px){
+    .sec-1-container{
+        flex-direction: column;
+        
+    } 
+    .sec-1-info{
+        margin:10px 20px;
+        padding: 30px;
+    }
+   .sec-1-para{
+    margin-top: 50px;
+   }
+   
+   #sec-2-id-1, #sec-2-id-2 , #sec-2-id-3{
+    margin: 0 10px;
+    padding: 30px;
+}
+.sec-3-img , .sec-4-img {
+    width: 400px;
+    height: 400px;
+}
+.sec-3-div, .sec-4-div{
+    padding: 0;
+    
+}
     
 }
