--- a/styles.css
+++ b/styles.css
@@ -338,6 +338,9 @@ html,body{
 color: black;
 
     }
+    .sec-1-title{
+        margin-top: 180px;
+    }
     .sec-1-description{
         
         padding: 0 10px;
@@ -358,22 +361,28 @@ color: black;
 
 
 #sec-2-id-1, #sec-2-id-2 , #sec-2-id-3{
-    margin-left: 20px;
+    padding: 20px;
+    margin: 0 20px;
+    width: 240px;
 }
 .sec-3-container , .sec-4-container{
-    margin-top: 30px;
+    margin: 30px 0;
     flex-direction: column;
     align-items: center;
+
 }
+
 .sec-3-div, .sec-4-div{
     margin-bottom: 20px;
 }
 .sec-4-div{
     padding-top: 5px;
 }
+
 .sec-3-img , .sec-4-img {
-    height: 325px;
-    width: 325px;
+    margin-top: 50px;
+    height: 320px;
+    width: 320px;
 }
 .sec-5-title{
     margin-top: 125px;
